// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputField snapshots > matches snapshot: DateType 1`] = `
<div>
  <div
    class="flex flex-col gap-1.5"
  >
    <label
      class="text-sm leading-none font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="_r_8_"
    >
      Date of birth
    </label>
    <div
      class=""
    >
      <input
        class="flex h-9 w-full rounded-md border border-input bg-background px-3 py-1 text-sm shadow-sm transition-colors placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
        id="_r_8_"
        placeholder="Enter text..."
        type="date"
      />
    </div>
  </div>
</div>
`;

exports[`InputField snapshots > matches snapshot: Disabled 1`] = `
<div>
  <div
    class="flex flex-col gap-1.5"
  >
    <label
      class="text-sm leading-none font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="_r_e_"
    >
      Full name
    </label>
    <div
      class=""
    >
      <input
        class="flex h-9 w-full rounded-md border border-input bg-background px-3 py-1 text-sm shadow-sm transition-colors placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
        disabled=""
        id="_r_e_"
        placeholder="Enter text..."
        type="text"
        value="Disabled value"
      />
    </div>
  </div>
</div>
`;

exports[`InputField snapshots > matches snapshot: EmailType 1`] = `
<div>
  <div
    class="flex flex-col gap-1.5"
  >
    <label
      class="text-sm leading-none font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="_r_7_"
    >
      Email
    </label>
    <div
      class=""
    >
      <input
        class="flex h-9 w-full rounded-md border border-input bg-background px-3 py-1 text-sm shadow-sm transition-colors placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
        id="_r_7_"
        placeholder="you@example.com"
        type="email"
      />
    </div>
  </div>
</div>
`;

exports[`InputField snapshots > matches snapshot: FieldOnly 1`] = `
<div>
  <div
    class="flex flex-col gap-1.5"
  >
    <div
      class=""
    >
      <input
        class="flex h-9 w-full rounded-md border border-input bg-background px-3 py-1 text-sm shadow-sm transition-colors placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
        id="_r_0_"
        placeholder="Enter text..."
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`InputField snapshots > matches snapshot: NumberType 1`] = `
<div>
  <div
    class="flex flex-col gap-1.5"
  >
    <label
      class="text-sm leading-none font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="_r_9_"
    >
      Quantity
    </label>
    <div
      class=""
    >
      <input
        class="flex h-9 w-full rounded-md border border-input bg-background px-3 py-1 text-sm shadow-sm transition-colors placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
        id="_r_9_"
        placeholder="Enter text..."
        type="number"
      />
    </div>
  </div>
</div>
`;

exports[`InputField snapshots > matches snapshot: PostcodeType 1`] = `
<div>
  <div
    class="flex flex-col gap-1.5"
  >
    <label
      class="text-sm leading-none font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="_r_a_"
    >
      Postcode
    </label>
    <div
      class=""
    >
      <input
        autocomplete="postal-code"
        class="flex h-9 w-full rounded-md border border-input bg-background px-3 py-1 text-sm shadow-sm transition-colors placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
        id="_r_a_"
        inputmode="text"
        placeholder="Enter text..."
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`InputField snapshots > matches snapshot: SplitType 1`] = `
<div>
  <div
    class="flex flex-col gap-1.5"
  >
    <label
      class="text-sm leading-none font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
    >
      Verification code
    </label>
    <div
      class=""
    >
      <div
        class="flex items-center gap-2 has-[input:disabled]:opacity-50"
        role="group"
      >
        <div
          class="flex items-center gap-2"
        >
          <input
            autocomplete="one-time-code"
            autocorrect="off"
            class="flex size-9 items-center justify-center rounded-md border border-input text-center text-sm shadow-sm outline-none transition-colors data-[filled]:border-ring disabled:cursor-not-allowed disabled:opacity-50"
            data-length="6"
            enterkeyhint="next"
            id="base-ui-_r_c_"
            inputmode="numeric"
            maxlength="6"
            pattern="\\d{1}"
            spellcheck="false"
            tabindex="0"
            type="text"
            value=""
          />
          <input
            autocomplete="off"
            autocorrect="off"
            class="flex size-9 items-center justify-center rounded-md border border-input text-center text-sm shadow-sm outline-none transition-colors data-[filled]:border-ring disabled:cursor-not-allowed disabled:opacity-50"
            data-length="6"
            enterkeyhint="next"
            id="base-ui-_r_c_-2"
            inputmode="numeric"
            pattern="\\d{1}"
            spellcheck="false"
            tabindex="-1"
            type="text"
            value=""
          />
          <input
            autocomplete="off"
            autocorrect="off"
            class="flex size-9 items-center justify-center rounded-md border border-input text-center text-sm shadow-sm outline-none transition-colors data-[filled]:border-ring disabled:cursor-not-allowed disabled:opacity-50"
            data-length="6"
            enterkeyhint="next"
            id="base-ui-_r_c_-3"
            inputmode="numeric"
            pattern="\\d{1}"
            spellcheck="false"
            tabindex="-1"
            type="text"
            value=""
          />
          <input
            autocomplete="off"
            autocorrect="off"
            class="flex size-9 items-center justify-center rounded-md border border-input text-center text-sm shadow-sm outline-none transition-colors data-[filled]:border-ring disabled:cursor-not-allowed disabled:opacity-50"
            data-length="6"
            enterkeyhint="next"
            id="base-ui-_r_c_-4"
            inputmode="numeric"
            pattern="\\d{1}"
            spellcheck="false"
            tabindex="-1"
            type="text"
            value=""
          />
          <input
            autocomplete="off"
            autocorrect="off"
            class="flex size-9 items-center justify-center rounded-md border border-input text-center text-sm shadow-sm outline-none transition-colors data-[filled]:border-ring disabled:cursor-not-allowed disabled:opacity-50"
            data-length="6"
            enterkeyhint="next"
            id="base-ui-_r_c_-5"
            inputmode="numeric"
            pattern="\\d{1}"
            spellcheck="false"
            tabindex="-1"
            type="text"
            value=""
          />
          <input
            autocomplete="off"
            autocorrect="off"
            class="flex size-9 items-center justify-center rounded-md border border-input text-center text-sm shadow-sm outline-none transition-colors data-[filled]:border-ring disabled:cursor-not-allowed disabled:opacity-50"
            data-length="6"
            enterkeyhint="done"
            id="base-ui-_r_c_-6"
            inputmode="numeric"
            pattern="\\d{1}"
            spellcheck="false"
            tabindex="-1"
            type="text"
            value=""
          />
        </div>
      </div>
      <input
        aria-hidden="true"
        autocomplete="one-time-code"
        id="base-ui-_r_c_-hidden-input"
        inputmode="numeric"
        maxlength="6"
        minlength="6"
        pattern="\\d{6}"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`InputField snapshots > matches snapshot: WithLabelAbove 1`] = `
<div>
  <div
    class="flex flex-col gap-1.5"
  >
    <label
      class="text-sm leading-none font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="_r_1_"
    >
      Full name
    </label>
    <div
      class=""
    >
      <input
        class="flex h-9 w-full rounded-md border border-input bg-background px-3 py-1 text-sm shadow-sm transition-colors placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
        id="_r_1_"
        placeholder="Enter text..."
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`InputField snapshots > matches snapshot: WithLabelBeside 1`] = `
<div>
  <div
    class="flex flex-col gap-1.5 sm:flex-row sm:items-center sm:gap-3"
  >
    <label
      class="text-sm leading-none font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 sm:w-32 sm:shrink-0"
      for="_r_2_"
    >
      Full name
    </label>
    <div
      class="sm:flex-1"
    >
      <input
        class="flex h-9 w-full rounded-md border border-input bg-background px-3 py-1 text-sm shadow-sm transition-colors placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
        id="_r_2_"
        placeholder="Enter text..."
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`InputField snapshots > matches snapshot: WithLeadingContent 1`] = `
<div>
  <div
    class="flex flex-col gap-1.5"
  >
    <label
      class="text-sm leading-none font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="_r_5_"
    >
      Price
    </label>
    <div
      class=""
    >
      <div
        class="flex h-9 w-full items-center gap-2 rounded-md border border-input bg-background px-3 shadow-sm transition-colors focus-within:ring-2 focus-within:ring-ring focus-within:ring-offset-2 has-[:disabled]:cursor-not-allowed has-[:disabled]:opacity-50"
      >
        <span
          class="text-sm"
        >
          $
        </span>
        <input
          class="flex-1 bg-transparent text-sm outline-none placeholder:text-muted-foreground disabled:cursor-not-allowed"
          id="_r_5_"
          placeholder="Enter text..."
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`InputField snapshots > matches snapshot: WithLeftIcon 1`] = `
<div>
  <div
    class="flex flex-col gap-1.5"
  >
    <label
      class="text-sm leading-none font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="_r_3_"
    >
      Search
    </label>
    <div
      class=""
    >
      <div
        class="flex h-9 w-full items-center gap-2 rounded-md border border-input bg-background px-3 shadow-sm transition-colors focus-within:ring-2 focus-within:ring-ring focus-within:ring-offset-2 has-[:disabled]:cursor-not-allowed has-[:disabled]:opacity-50"
      >
        <span
          class="flex size-4 shrink-0 items-center justify-center text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-search"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-4.34-4.34"
            />
            <circle
              cx="11"
              cy="11"
              r="8"
            />
          </svg>
        </span>
        <input
          class="flex-1 bg-transparent text-sm outline-none placeholder:text-muted-foreground disabled:cursor-not-allowed"
          id="_r_3_"
          placeholder="Search..."
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`InputField snapshots > matches snapshot: WithRightIcon 1`] = `
<div>
  <div
    class="flex flex-col gap-1.5"
  >
    <label
      class="text-sm leading-none font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="_r_4_"
    >
      Email
    </label>
    <div
      class=""
    >
      <div
        class="flex h-9 w-full items-center gap-2 rounded-md border border-input bg-background px-3 shadow-sm transition-colors focus-within:ring-2 focus-within:ring-ring focus-within:ring-offset-2 has-[:disabled]:cursor-not-allowed has-[:disabled]:opacity-50"
      >
        <input
          class="flex-1 bg-transparent text-sm outline-none placeholder:text-muted-foreground disabled:cursor-not-allowed"
          id="_r_4_"
          placeholder="you@example.com"
          type="text"
        />
        <span
          class="flex size-4 shrink-0 items-center justify-center text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-mail"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7"
            />
            <rect
              height="16"
              rx="2"
              width="20"
              x="2"
              y="4"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`InputField snapshots > matches snapshot: WithTrailingContent 1`] = `
<div>
  <div
    class="flex flex-col gap-1.5"
  >
    <label
      class="text-sm leading-none font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="_r_6_"
    >
      Weight
    </label>
    <div
      class=""
    >
      <div
        class="flex h-9 w-full items-center gap-2 rounded-md border border-input bg-background px-3 shadow-sm transition-colors focus-within:ring-2 focus-within:ring-ring focus-within:ring-offset-2 has-[:disabled]:cursor-not-allowed has-[:disabled]:opacity-50"
      >
        <input
          class="flex-1 bg-transparent text-sm outline-none placeholder:text-muted-foreground disabled:cursor-not-allowed"
          id="_r_6_"
          placeholder="Enter text..."
          type="text"
        />
        <span
          class="text-sm"
        >
          kg
        </span>
      </div>
    </div>
  </div>
</div>
`;
